local/user/user_envoy.yaml
static_resources:
  listeners:
  - name: userservice-listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8082 }

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: userservice-route
              domains: ["*"]
              routes:
              - match: { prefix: "/userservice" }
                route:
                  cluster: userservice
                  max_grpc_timeout: 2s
              - match: { prefix: "/postservice" }
                route:
                  cluster: postservice-envoy
                  max_grpc_timeout: 2s
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          http_filters:
          - name: envoy.router

  clusters:
  - name: userservice
    connect_timeout: 15s
    type: strict_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: user_api
        port_value: 50052
  - name: postservice-envoy
    connect_timeout: 15s
    type: strict_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: post_proxy
        port_value: 8081

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9902 }
